# drishya

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  ci.yml  quality.yml  test.yml
apps/playground/: index.html  loader.js  main.js  stateStore.js
crates/chart-core/: Cargo.toml
crates/chart-core/src/: chart.rs  drawings.rs  lib.rs  plots.rs  render.rs  scale.rs
crates/chart-core/src/api/dto/: drawings.rs  mod.rs
crates/chart-core/src/api/wasm/dto/: persistence.rs
crates/chart-core/src/api/wasm/exports/: appearance.rs  data.rs  events.rs  panes.rs
crates/chart-core/src/chart/: events.rs  interaction.rs  persistence.rs
crates/chart-core/src/chart/anchors/: common.rs  mod.rs
crates/chart-core/src/chart/interaction/: draw.rs
crates/chart-core/src/chart/interaction/draw/: edit.rs
crates/chart-core/src/chart/interaction/draw/common/: lifecycle.rs
crates/chart-core/src/chart/interaction/draw/shapes/: circle.rs  ellipse.rs  fib.rs  highlighter.rs  line.rs  range.rs  text.rs
crates/chart-core/src/chart/panes/: constraints.rs  mod.rs
crates/chart-core/src/chart/plots/: mod.rs
crates/chart-core/src/chart/scene/: helpers.rs  mod.rs
crates/chart-core/src/drawings/: commands.rs  persistence.rs
crates/chart-core/src/drawings/hit_test/: tests.rs
crates/chart-core/src/drawings/model/: layer.rs  mod.rs
crates/chart-core/src/drawings/render/builders/: mod.rs
crates/chart-core/src/drawings/shape/: brush.rs  ellipse.rs  highlighter.rs  ray.rs  text.rs  triangle.rs
crates/chart-core/src/drawings/sim/: position.rs
crates/chart-core/src/events/: mod.rs  store.rs  types.rs
crates/chart-core/src/indicators/: api.rs  catalog.rs  contracts.rs  error.rs  registry.rs
crates/chart-core/src/indicators/engine/: mod.rs
crates/chart-core/src/indicators/provider/: mod.rs  ta_engine_provider.rs  ta_plot_provider.rs
crates/chart-core/src/plots/: model.rs  render.rs
crates/chart-core/src/render/: backends.rs  ticks.rs
crates/chart-core/src/replay/: mod.rs  state.rs
crates/chart-core/src/runtime/: mod.rs
crates/chart-wasm/: Cargo.toml
crates/indicators-rs/: Cargo.toml
src/: chart.rs  drawings.rs  indicators.rs  layout.rs  lib.rs  plots.rs  render.rs  scale.rs  types.rs  viewport.rs  web.rs
src/chart/: anchors.rs  appearance.rs  axis_mode.rs  compare.rs  compare_alignment.rs  drop_points.rs  hit_test.rs  interaction.rs  persistence.rs  plots.rs  replay.rs  scene.rs  state.rs  tools.rs
src/drawings/: commands.rs  hit_test.rs  persistence.rs  render.rs  shape.rs  (+2 more)
ui-core/: README.md  package-lock.json  package.json  tailwind.preset.ts  tsconfig.json
(+170 files in other folders)
