[package]
name = "drishya"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  ".",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ta-engine = { git = "https://github.com/laakhay/ta.git", package = "ta-engine", rev = "79ce8f3f788ae71795d388c032f2b046fe6fded4" }

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
  "CanvasRenderingContext2d",
  "console"
]

[dev-dependencies]
proptest = "1"
