[package]
name = "chart-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ta-engine = { path = "../../../laakhay/laakhay-dev/ta/crates/ta-engine" }

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
  "CanvasRenderingContext2d",
  "console"
]

[dev-dependencies]
proptest = "1"
